# GTest_GItHub_Actions_Example

./: CMakeLists.txt  README.md
.github/workflows/: gtest.yml
src/: cal.cpp  cal.h  src.cpp  src.sln  src.vcxproj  src.vcxproj.filters
tst/: CMakeLists.txt  test.cpp  tst.vcxproj
